feat: role validation and add email validation in client and trainer routes
