# src/controllers/client.controller.ts
@@ -1,30 +1,46 @@
 import { Request, Response } from 'express';
-import { ClientModel } from '../models';
+import { ClientModel, UserModel } from '../models';
+import bcrypt from 'bcryptjs';
 
 
 export const postClient = async (req: Request, res: Response) => {
+    const { names, surnames, email, phone, address, user, planId, trainerId } = req.body;
+    const { password } = user;
+    const { id: roleId } = req.body.role;
 
-    const { names, surnames, email, phone, address, planId, trainerId } = req.body;
-
-    
     try {
-        
-        const client = ClientModel.build({
+
+        //Encrypt Password
+        const salt = bcrypt.genSaltSync();
+        const hashPassword = bcrypt.hashSync(password, salt);
+
+        const client = await ClientModel.create({
             names,
             surnames,
             email,
             phone,
             address,
             planId,
-            trainerId
-        })
-        
-        console.log(client.toJSON());
-        await client.save();
-        res.status(201).json( client.toJSON() );
+            trainerId,
+            user: {
+                email,
+                password: hashPassword,
+                roleId
+            }
+        }, {
+            include: [{
+                model: UserModel,
+                as: 'user'
+            }]
+        });
+        // sacar password del client.toJSON()
+
+        const response = client.toJSON();
+        delete response.user;
+
+        res.status(201).json(response);
     } catch (error) {
         console.log(error);
-        
         res.status(500).json({ message: 'Internal Server Error' });
     }
 }
@@ -34,7 +50,7 @@ export const getClients = async (req: Request, res: Response) => {
     try {
         const clients = await ClientModel.findAll();
 
-        res.json( clients );
+        res.json(clients);
     } catch (error) {
         res.status(500).json({ message: 'Internal Server Error' });
     }
